# SDL-plus-plus

./: CMakeLists.txt
SDL++ Example/: Example.cpp
SDL++/include/: SDL.hpp  SDL_ttf.hpp  audio.hpp  blendmode.hpp  error.hpp  events.hpp  image.hpp  mouse.hpp  observer.hpp  pixels.hpp  ray.hpp  rect.hpp  render.hpp  scancode.hpp  surface.hpp  timer.hpp  version.hpp  video.hpp
SDL++/src/: SDL_ttf.cpp  audio.cpp  blendmode.cpp  error.cpp  image.cpp  mouse.cpp  pixels.cpp  ray.cpp  rect.cpp  render.cpp  version.cpp
